Oh boy, so much. Added shiny sprites to display. Fixed Chains so they display that this path is multiple shinies. Fixed createdistortion for 1.1.1

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -164,7 +164,7 @@ picture,
 video,
 canvas,
 svg {
-  display: block;
+  display: inline-block;
   max-width: 100%;
 }
 
